# cloud-run-langchain-rag

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: indexer.py  server.py
images/: cloud-sql-setup.txt  langchain-architecture.txt
